Fixed issue, was z-index related

--- a/src/components/auto-complete/auto-complete.css
+++ b/src/components/auto-complete/auto-complete.css
@@ -11,6 +11,7 @@
   width: 100%;
   height: 100%;
   position: relative;
+  z-index: var(--autocomplete-z-index, 1);
   font-size: var(--font-size, 15px);
   font-family: var(--autocomplete-font-family, Arial);
 }
